# xenoprobes

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ChangeLog  INSTALL.md  Makefile.am  NEWS  README.md  bootstrap  configure.ac  mira.dot  sample-inventory.csv  sites.csv  vcpkg.json
.github/workflows/: cmake-single-platform.yml
cmake/: deployqt.cmake
include/probeoptimizer/: csv.h  ore.h  probe.h  probe_arrangement.h  probe_optimizer.h  semaphore.h  site.h  site_links.h  site_list.h  solution.h
resources/: resources.qrc
resources/probe_levels/: gen_probelevels.py
scripts/: fn_sites.py
src/: CMakeLists.txt  main.cpp  optimize.cpp  ore.cpp  ore.h  probe.cpp  probe_arrangement.cpp  probe_arrangement.h  probe_optimizer.cpp  probe_optimizer.h  semaphore.cpp  site.cpp  site.h  site_list.cpp  site_list.h  solution.cpp  solution.h  xenoprobes_config.h.in
src/probeoptimizer/: CMakeLists.txt  csv.cpp  ore.cpp  probe.cpp  probe_arrangement.cpp  probe_optimizer.cpp  semaphore.cpp  site.cpp  site_list.cpp  sitedata.cpp  solution.cpp
src/sitelinks/: CMakeLists.txt  main.cpp
src/sitelist/: CMakeLists.txt  main.cpp
src/xenoprobes/: CMakeLists.txt  main.cpp
src/xenoprobes_gui/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  DataProbe.cpp  DataProbe.h  FnSite.cpp  FnSite.h  FnSiteWidget.cpp  FnSiteWidget.h  InventoryLoader.cpp  InventoryLoader.h  InventoryModel.cpp  InventoryModel.h  MainWindow.cpp  MainWindow.h  MiraMap.cpp  MiraMap.h  QGraphicsItemDeleter.h  RunOptions.h  RunOptionsWidget.cpp  RunOptionsWidget.h  SiteListLoader.cpp  SiteListLoader.h  SliderWithValWidget.cpp  SliderWithValWidget.h  SolutionWidget.cpp  SolutionWidget.h  SolverRunner.cpp  SolverRunner.h  fn_links.py  fn_sites.py  main.cpp  settings.h  themeIcon.cpp  themeIcon.h  xenoprobes.rc
